--- a/ECE643/kurl/setup.cfg
+++ b/ECE643/kurl/setup.cfg
@@ -10,5 +10,6 @@ description = snake game for RL
 [options]
 include_package_data = true
 install_requires =
+    pygame
     gym
     python_version >= "3.8"
