--- a/ECE643/kurl/setup.cfg
+++ b/ECE643/kurl/setup.cfg
@@ -10,6 +10,10 @@ description = snake game for RL
 [options]
 include_package_data = true
 install_requires =
+    pandas
+    numpy
+    pytorch
+    stable-baselines3[extra]
     pygame
     gym
     python_version >= "3.8"
